--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .DS_Store
 part1/meetupme-mobile/node_modules
 part1/meetup-backend/node_modules
+part2/meetupme-mobile/node_modules
+part2/meetup-backend/node_modules
