--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ part1/meetupme-mobile/node_modules
 part1/meetup-backend/node_modules
 part2/meetupme-mobile/node_modules
 part2/meetup-backend/node_modules
+part3/meetup-backend/node_modules
+part3/meetupme-mobile/node_modules
